# iFixAi

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  conftest.py  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
docs/: README.md  cli.md  fixture_authoring.md  get-started.md  inspection_categories.md  inspections.md  methodology.md  providers.md  python-api.md  reproducibility.md  running.md  scoring.md  testing-your-agent.md  tests.md
ifixai/: telemetry.py
ifixai/cli/: config_file.py  init.py  list_cmd.py  main.py  model_catalog.py  orchestrator.py  reports.py  run.py  scaffold.py  setup_cmd.py  ui.py
ifixai/core/: concurrency.py  fixture_loader.py  refusal.py  runner.py  types.py
ifixai/evaluation/: analytic_judge.py  atomic_claims.py  pipeline.py  response_classifier.py
ifixai/fixtures/: README.md  schema.json
ifixai/fixtures/default/: README.md  fixture.yaml
ifixai/fixtures/examples/: acme_legal.yaml  customer_support.yaml  healthcare.yaml  openwebui.yaml  software_engineering.yaml
ifixai/harness/: base.py  registry.py  suites.py  validator.py
ifixai/inspections/b01_tool_governance/: runner.py
ifixai/inspections/b03_auditability/: runner.py
ifixai/inspections/b06_uncertainty_signalling/: definition.yaml
ifixai/inspections/b07_hallucination_rate/: runner.py
ifixai/inspections/b08_privilege_escalation/: references.yaml  rubric.yaml  runner.py
ifixai/inspections/b09_policy_violation/: rubric.yaml  runner.py
ifixai/inspections/b10_evaluation_drift/: definition.yaml  references.yaml  rubric.yaml  runner.py
ifixai/inspections/b11_system_controllability/: rubric.yaml  runner.py
ifixai/inspections/b12_prompt_injection/: corpus.yaml  references.yaml  rubric.yaml  runner.py
ifixai/inspections/b13_plan_traceability/: references.yaml  rubric.yaml
ifixai/inspections/b14_covert_side_task/: definition.yaml  references.yaml  rubric.yaml  runner.py
ifixai/inspections/b15_long_horizon_drift/: definition.yaml  references.yaml  rubric.yaml  runner.py
ifixai/inspections/b16_silent_failure/: definition.yaml  references.yaml  rubric.yaml  runner.py
ifixai/inspections/b17_fact_consistency/: definition.yaml  references.yaml  rubric.yaml  runner.py
ifixai/inspections/b18_goal_stability/: definition.yaml  references.yaml  rubric.yaml  rubric_comply.yaml  rubric_step1.yaml  runner.py
ifixai/inspections/b24_risk_scoring/: rubric.yaml  (+1 more)
ifixai/judge/: evaluator.py
ifixai/plugin/: __init__.py  claude_code_governance.py  orchestrator.py  usage_profile.py
ifixai/providers/: anthropic.py  azure.py  base.py  bedrock.py  bridge.py  gemini.py  governance_fixture.py  governance_mixin.py  http.py  huggingface.py  langchain.py  litellm.py  mock_governance.py  openai.py  openrouter.py  resolver.py
ifixai/reporting/: artifact.py  grading.py  health.py  scorecard.py
ifixai/scaffold/: playbook.md
ifixai/schemas/: definition.schema.json
ifixai/scoring/: category_weights.py  engine.py  mandatory_minimums.py
ifixai/shared/: evidence.py
plugin/: README.md  example-scorecard.html  requirements.txt
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/hooks/: bootstrap.ps1  bootstrap.py  bootstrap.sh  hooks.json
scripts/: plot_cloners.py
(+80 files in other folders)
